--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mi Página Web Simple</title>
+    <title>Mi Página Web Smple</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -46,7 +46,13 @@
     </main>
 
     <footer>
-        <p>&copy; 2023 Mi Página Web Simple. Todos los derechos reservados.</p>
+        <p>&copy; 2025 Mi Página Web Simple. Todos los derechos reservados.</p>
     </footer>
+    
+    <div class="whatsapp-float">
+        <a href="https://wa.me/7777777777" target="_blank" rel="noopener noreferrer">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/WhatsApp_icon.png" alt="WhatsApp">
+        </a>
+    </div>   
 </body>
 </html>
