--- a/index.html
+++ b/index.html
@@ -49,6 +49,12 @@
         <p>&copy; 2025 Mi Página Web Simple. Todos los derechos reservados.</p>
     </footer>
     
-    
+    <!-- Botón flotante de WhatsApp -->
+<div class="whatsapp-float">
+    <a href="https://wa.me/77777777" target="_blank" rel="noopener noreferrer">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
+    </a>
+</div>
+
 </body>
 </html>
