--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     
     <!-- Botón flotante de WhatsApp -->
 <div class="whatsapp-float">
-    <a href="https://wa.me/51910391168"  target="_blank" rel="noopener noreferrer"></a>
+    <a href="https://wa.me/51910391168"  target="_blank" rel="noopener noreferrer">
         <img src="https://upload.wikimedia.org/wikipedia/commons/6/6b/WhatsApp.svg" alt="WhatsApp">
     </a>
 </div>
